--- a/src/components/MyStyles.css
+++ b/src/components/MyStyles.css
@@ -1,3 +1,16 @@
 .primary{
-    color: orchid
+    color: orchid;
+}
+
+.font-xl{
+    font-size: 30px;
+}
+
+.border{
+    border-color: black;
+    border-radius: 3px;
+    border-top: 3px;
+    background-color: aqua;
+    margin: 0;
+    padding: 0;
 }
